<resources>
    <string name="app_name">Chat</string>
    <string name="changeinfo">CHANGE INFORMATION</string>
    <string name="logout">LOG OUT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="createanaccount">Create an Account?</string>
    <string name="ninja">Ninja</string>
    <string name="name">Name</string>
    <string name="register">REGISTER</string>
    <string name="home">HOME</string>
    <string name="chat">CHAT</string>
    <string name="detail">DETAIL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
