<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true"
    tools:context="com.example.thinhhoang.chat.RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:subtitleTextColor="@color/colorWhite"
        app:title="Register"
        app:titleTextColor="@color/colorWhite" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edtEmail"
            android:layout_centerHorizontal="true"
            android:background="@color/colorWhite"
            android:drawableEnd="@drawable/person"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimary" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@color/colorWhite"
            android:drawableEnd="@drawable/mail"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimary" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edtEmail"
            android:background="@color/colorWhite"
            android:drawableEnd="@drawable/lock"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimary" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/pressed_button"
            android:text="@string/register"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorPrimary" />
    </RelativeLayout>
</RelativeLayout>
